#ifndef FILEPROCESSOR_H
#define FILEPROCESSOR_H

#include "bitsc++.h"

class FileProcessor {
 public:
  string Process(string file_name);

 private:
  string title_feature_;
};

#endif
